# llm_adapt

./: Cargo.toml  LICENSE  README.md
crates/llm_adapt_cli/: Cargo.toml
crates/llm_adapt_cli/src/: main.rs  output.rs
crates/llm_adapt_cli/src/commands/: call.rs  config_cmd.rs  handlers.rs  mod.rs  preview.rs  tui.rs  web.rs
crates/llm_adapt_cli/src/config/: mod.rs  store.rs
crates/llm_adapt_core/: Cargo.toml
crates/llm_adapt_core/examples/: basic_anthropic.rs  basic_openai.rs  custom_handler.rs  streaming.rs  tool_calling.rs
crates/llm_adapt_core/src/: capability.rs  client.rs  error.rs  lib.rs
crates/llm_adapt_core/src/handler/: mod.rs  registry.rs
crates/llm_adapt_core/src/handlers/: anthropic.rs  mod.rs  openai.rs
crates/llm_adapt_core/src/http/: config.rs  hook.rs  mod.rs  retry.rs
crates/llm_adapt_core/src/types/: cache.rs  conversation.rs  mod.rs  request.rs  response.rs  stream.rs  tool.rs  tool_result.rs  usage.rs
