[workspace]
resolver = "2"
members = [
    "crates/llm_adapt_core",
    "crates/llm_adapt_cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["llm_adapt contributors"]
repository = "https://github.com/your-org/llm_adapt"
description = "Production-grade LLM API abstraction layer for Rust"
rust-version = "1.85"

[workspace.dependencies]
tokio        = { version = "1.40", features = ["full"] }
reqwest      = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "socks"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
thiserror    = "1"
bytes        = "1"
futures-util = "0.3"
futures      = "0.3"
tracing      = "0.1"
toml         = "0.8"
clap         = { version = "4", features = ["derive"] }
dirs         = "5"
anyhow       = "1"
tracing-subscriber = "0.3"
async-trait  = "0.1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
