[package]
name = "llm_adapt_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Unified CLI / TUI / Web entry point for llm_adapt"
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "llm-adapt"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
llm_adapt_core = { path = "../llm_adapt_core" }
clap               = { workspace = true }
tokio              = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
toml               = { workspace = true }
dirs               = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util       = { workspace = true }
