[package]
name = "llm_adapt_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core abstractions for the llm_adapt LLM API anti-corruption layer"
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
tokio        = { workspace = true }
reqwest      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
bytes        = { workspace = true }
futures-util = { workspace = true }
tracing      = { workspace = true }

[dev-dependencies]
tokio        = { workspace = true }
futures-util = { workspace = true }
serde_json   = { workspace = true }
bytes        = { workspace = true }

[features]
default   = ["openai", "anthropic"]
openai    = []
anthropic = []
